// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/dockerfile/extract extractPackageFile() detects ["stage"] and ["final"] deps of docker multi-stage build. 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "8.15.1-alpine",
    "datasource": "docker",
    "depName": "node",
    "depType": "stage",
    "replaceString": "node:8.15.1-alpine",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "1.7.3",
    "datasource": "docker",
    "depName": "golang",
    "depType": "stage",
    "replaceString": "golang:1.7.3",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "latest",
    "datasource": "docker",
    "depName": "alpine",
    "depType": "final",
    "replaceString": "alpine:latest",
  },
]
`;

exports[`manager/dockerfile/extract extractPackageFile() extracts images from all sorts of (maybe multiline) FROM and COPY --from statements 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "image1",
    "depType": "stage",
    "replaceString": "image1",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": "sha256:abcdef",
    "currentValue": "1.0.0",
    "datasource": "docker",
    "depName": "image2",
    "depType": "stage",
    "replaceString": "image2:1.0.0@sha256:abcdef",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "image4",
    "depType": "stage",
    "replaceString": "image4",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "image5",
    "depType": "stage",
    "replaceString": "image5",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "image6",
    "depType": "stage",
    "replaceString": "image6",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": "sha256:abcdef",
    "currentValue": "1.0.0",
    "datasource": "docker",
    "depName": "image7",
    "depType": "stage",
    "replaceString": "image7:1.0.0@sha256:abcdef",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "image11",
    "depType": "stage",
    "replaceString": "image11",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "image12",
    "depType": "stage",
    "replaceString": "image12",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "image13",
    "depType": "final",
    "replaceString": "image13",
  },
]
`;

exports[`manager/dockerfile/extract extractPackageFile() extracts images on adjacent lines 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": "sha256:d743b4141b02fcfb8beb68f92b4cd164f60ee457bf2d053f36785bf86de16b0d",
    "currentValue": "8.11.3-alpine",
    "datasource": "docker",
    "depName": "node",
    "depType": "stage",
    "replaceString": "node:8.11.3-alpine@sha256:d743b4141b02fcfb8beb68f92b4cd164f60ee457bf2d053f36785bf86de16b0d",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "1.1.1",
    "datasource": "docker",
    "depName": "buildkite/puppeteer",
    "depType": "final",
    "replaceString": "buildkite/puppeteer:1.1.1",
  },
]
`;

exports[`manager/dockerfile/extract extractPackageFile() handles calico/node 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "calico/node",
    "depType": "final",
    "replaceString": "calico/node",
  },
]
`;

exports[`manager/dockerfile/extract extractPackageFile() handles naked dep 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "node",
    "depType": "final",
    "replaceString": "node",
  },
]
`;

exports[`manager/dockerfile/extract extractPackageFile() handles prefixes 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{lookupName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "18.04",
    "datasource": "docker",
    "depName": "ubuntu",
    "depType": "final",
    "lookupName": "amd64/ubuntu",
    "replaceString": "amd64/ubuntu:18.04",
    "versioning": "ubuntu",
  },
]
`;

exports[`manager/dockerfile/extract extractPackageFile() handles ubuntu 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "18.04",
    "datasource": "docker",
    "depName": "ubuntu",
    "depType": "final",
    "replaceString": "ubuntu:18.04",
    "versioning": "ubuntu",
  },
]
`;

exports[`manager/dockerfile/extract extractPackageFile() skips index reference COPY --from tags 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "6.12.3",
    "datasource": "docker",
    "depName": "node",
    "depType": "final",
    "replaceString": "node:6.12.3",
  },
]
`;

exports[`manager/dockerfile/extract extractPackageFile() skips named multistage COPY --from tags 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "6.12.3",
    "datasource": "docker",
    "depName": "node",
    "depType": "final",
    "replaceString": "node:6.12.3",
  },
]
`;
